# wgpuISP

./: .gitignore  Cargo.toml  test.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs  macro_debug.rs  main.rs  operations.rs  setup.rs
src/shaders/: auto_white_balance.wgsl  bayer_to_vec4.wgsl  black_level.wgsl  debayer.wgsl  example.wgsl  rgb_space.wgsl  to_texture.wgsl  utils.wgsl
tests/: runner.rs
tests/dumps/: blah.py  inspect.ipynb  load.py
viewer/: Cargo.toml  default.json  reasonable_MPV-cam1-left.json  save  test.json
viewer/src/: camera2d.rs  file_watcher.rs  lib.rs  main.rs  my_sprite.wgsl  my_sprite_pipeline.rs  renderer.rs  simple_renderer.rs  ui_form.rs
