[workspace]
members = ["viewer", "macros"]

[package]
name = "wgpu_isp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
gpwgpu.workspace = true
macros.path = "macros"


[workspace.dependencies]
gpwgpu.path = "../gpwgpu"
