[workspace]
members = ["viewer", "macros"]

[package]
name = "wgpu_isp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
glam = { version = "0.24.2", features = ["serde"] }
gpwgpu.workspace = true
macros.path = "macros"
serde = { version = "1.0.189", features = ["derive"] }

[workspace.dependencies]
gpwgpu.path = "../gpwgpu"
