[workspace]
members = ["viewer", "macros"]

[package]
name = "wgpu_isp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]

[dependencies]
bytemuck = { version = "1.14.0", features = ["derive"] }
gpwgpu.workspace = true
macros.path = "macros"
serde = { version = "1.0.189", features = ["derive"] }
glam.workspace = true

[workspace.dependencies]
gpwgpu.path = "../gpwgpu"
glam = { version = "0.25", features = ["serde"] }
