[package]
name = "viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu_isp.path = ".."
macros.path = "../macros"
bevy = {version = "0.11"}
# bevy.path = "../../bevy"
gpwgpu.workspace = true
bitflags = "2.4.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
bevy_egui = "0.22.0"
notify = "6.1.1"
crossbeam-channel = "0.5.8"
serde_json = "1.0.107"
glam = { version = "0.24.2", features = ["serde"] }
